[package]
name = "nj-build"
version = "0.2.1"
authors = ["fluvio.io"]
edition = "2018"
description = "build configuration for node-bindgen"
repository = "https://github.com/infinyon/node-bindgen"
license = "Apache-2.0"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
cc = "1.0.58"
